--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -104,6 +104,7 @@
     \item[$\Omega_G$] Gas-remaining host-call.
     \item[$\Omega_H$] Historical-lookup-preimage host-call.
     \item[$\Omega_I$] Information-on-service host-call.
+    \item[$\Omega_J$] Query-preimage host-call.
     \item[$\Omega_K$] Kickoff-\textsc{pvm} host-call.
     \item[$\Omega_L$] Lookup-preimage host-call.
     \item[$\Omega_M$] Make-\textsc{pvm} host-call.
@@ -111,8 +112,8 @@
     \item[$\Omega_O$] Poke-\textsc{pvm} host-call.
     \item[$\Omega_P$] Peek-\textsc{pvm} host-call.
     \item[$\Omega_Q$] Quit-service host-call.
-    \item[$\Omega_S$] Solicit-preimage host-call.
     \item[$\Omega_R$] Read-storage host-call.
+    \item[$\Omega_S$] Solicit-preimage host-call.
     \item[$\Omega_T$] Transfer host-call.
     \item[$\Omega_U$] Upgrade-service host-call.
     \item[$\Omega_V$] Void inner-\textsc{pvm} memory host-call.
