--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -121,6 +121,7 @@
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
     \item[$\Omega_Y$] Import segment host-call.
     \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
+    \item[$\Omega_\Taurus$] Yield accumulation trie result host-call.
   \end{description}
 \end{description}
 
